[package]
name = "coins-android-bug-repro"
version = "0.1.0"
edition = "2021"

[dependencies]
coins-ledger = { git = "https://github.com/summa-tx/coins", rev = "de4de2650ea052c614cf731e6e24cc903820b564" }
futures-executor = "0.3.29"
hex = "0.4.3"
hex-literal = "0.4.1"
tokio = { version = "1.34.0", features = ["full"] }
